laborations/lab2/testsuite/good/ass_in_if.cc
void nop() {
        // do nothing
}

int main() {
        int x = 5;
        if (true) x = 7; else nop();
        printInt(x);
        return 0;
}
