laborations/lab2/testsuite/bad/decl-cleanup-if-right.cc
// Check that scope of if statement is cleaned up

int main () {
  if (false) {} else int x = 0;
  return x;
}
